--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # Application logging level
 logging.level.root=INFO
 logging.level.com.example.demo=DEBUG
+
+# Server Port
+server.port=8888
