--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,21 @@
 # DataSource settings: set here configurations for the database connection
-spring.datasource.url=jdbc:sqlserver://cst323.database.windows.net:1433;database=cst323;user=willk@cst323;password=#8675309!abc;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-spring.datasource.username=willk@cst323
-spring.datasource.password=#8675309!abc
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# Azure Connection
+#spring.datasource.url=jdbc:sqlserver://cst323.database.windows.net:1433;database=cst323;user=willk@cst323;password=#8675309!abc;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+#spring.datasource.username=willk@cst323
+#spring.datasource.password=#8675309!abc
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# MySQL DataSource settings - Heroku Connection - JawsDB
+spring.datasource.url=jdbc:mysql://sp6xl8zoyvbumaa2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/dxoydtaur3mfbtte
+spring.datasource.username=e6l6dr50isdkuzz7
+spring.datasource.password=we4uy5ttm16a8lkz
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate ddl auto (none, update, create, create-drop, validate)
 spring.jpa.hibernate.ddl-auto=update
 
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+# adjusted for mysql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect 
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect //MSSQL DB Connection
 
 # Hibernate settings are prefixed with spring.jpa
 spring.jpa.show-sql=true
